--- a/WorkSchedule.Api/appsettings.json
+++ b/WorkSchedule.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3309;User ID=root;Password=TestPass123;Database=WorkSchedule;"
+  }
 }
