--- a/ComposeFiles/database.yaml
+++ b/ComposeFiles/database.yaml
@@ -6,4 +6,4 @@ services:
       MYSQL_ROOT_PASSWORD: TestPass123
     image: mysql:8.0.40-debian
     volumes:
-      - db-data:/var/lib/mysql
+      - workschedule-db-vol:/var/lib/mysql
