Added xml comments for endpoints and an authorization option for swagger

--- a/WorkSchedule.Api/WorkSchedule.Api.csproj
+++ b/WorkSchedule.Api/WorkSchedule.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>e1132efa-772b-4548-95ce-1d07708f4213</UserSecretsId>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
